--- a/views/main.pug
+++ b/views/main.pug
@@ -19,7 +19,8 @@ html(lang='en' class=theme)
 		link(rel='stylesheet' href='/css/editcube.css')
 		link(rel='stylesheet' href='/css/stylesheet.css')
 		link(rel='stylesheet' href='/css/tags.css')
-		link(href='//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.12.0/katex.min.css', rel='stylesheet')
+		//- Align with the version of katex installed via rehype-katex
+		link(href='https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.css', rel='stylesheet')
 		link(href='https://code.cdn.mozilla.net/fonts/fira.css' rel='stylesheet')
 		if !patron
 			script(type='text/javascript').
