--- a/packages/server/public/css/stylesheet.css
+++ b/packages/server/public/css/stylesheet.css
@@ -877,19 +877,24 @@ video {
   margin-bottom: 2rem;
 }
 .me-0 {
-  margin-inline-end: 0px;
+  -webkit-margin-end: 0px;
+          margin-inline-end: 0px;
 }
 .me-1 {
-  margin-inline-end: 0.25rem;
+  -webkit-margin-end: 0.25rem;
+          margin-inline-end: 0.25rem;
 }
 .me-2 {
-  margin-inline-end: 0.5rem;
+  -webkit-margin-end: 0.5rem;
+          margin-inline-end: 0.5rem;
 }
 .me-3 {
-  margin-inline-end: 0.75rem;
+  -webkit-margin-end: 0.75rem;
+          margin-inline-end: 0.75rem;
 }
 .me-auto {
-  margin-inline-end: auto;
+  -webkit-margin-end: auto;
+          margin-inline-end: auto;
 }
 .ml-1 {
   margin-left: 0.25rem;
@@ -910,13 +915,16 @@ video {
   margin-right: 1rem;
 }
 .ms-1 {
-  margin-inline-start: 0.25rem;
+  -webkit-margin-start: 0.25rem;
+          margin-inline-start: 0.25rem;
 }
 .ms-2 {
-  margin-inline-start: 0.5rem;
+  -webkit-margin-start: 0.5rem;
+          margin-inline-start: 0.5rem;
 }
 .ms-auto {
-  margin-inline-start: auto;
+  -webkit-margin-start: auto;
+          margin-inline-start: auto;
 }
 .mt-0 {
   margin-top: 0px;
@@ -1014,6 +1022,7 @@ video {
   max-height: 24rem;
 }
 .max-h-fit {
+  max-height: -webkit-fit-content;
   max-height: fit-content;
 }
 .max-h-full {
@@ -1065,12 +1074,14 @@ video {
   width: 100%;
 }
 .w-max {
+  width: -webkit-max-content;
   width: max-content;
 }
 .min-w-\[2\.5rem\] {
   min-width: 2.5rem;
 }
 .min-w-fit {
+  min-width: -webkit-fit-content;
   min-width: fit-content;
 }
 .min-w-full {
@@ -1883,16 +1894,20 @@ video {
   padding-bottom: 2rem;
 }
 .pe-0 {
-  padding-inline-end: 0px;
+  -webkit-padding-end: 0px;
+          padding-inline-end: 0px;
 }
 .pe-2 {
-  padding-inline-end: 0.5rem;
+  -webkit-padding-end: 0.5rem;
+          padding-inline-end: 0.5rem;
 }
 .pe-3 {
-  padding-inline-end: 0.75rem;
+  -webkit-padding-end: 0.75rem;
+          padding-inline-end: 0.75rem;
 }
 .pe-4 {
-  padding-inline-end: 1rem;
+  -webkit-padding-end: 1rem;
+          padding-inline-end: 1rem;
 }
 .pl-2 {
   padding-left: 0.5rem;
@@ -1907,10 +1922,12 @@ video {
   padding-right: 0.5rem;
 }
 .ps-0 {
-  padding-inline-start: 0px;
+  -webkit-padding-start: 0px;
+          padding-inline-start: 0px;
 }
 .ps-2 {
-  padding-inline-start: 0.5rem;
+  -webkit-padding-start: 0.5rem;
+          padding-inline-start: 0.5rem;
 }
 .pt-0 {
   padding-top: 0px;
@@ -2122,13 +2139,16 @@ video {
   color: rgb(133 77 14 / var(--tw-text-opacity));
 }
 .underline {
-  text-decoration-line: underline;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
 }
 .overline {
-  text-decoration-line: overline;
+  -webkit-text-decoration-line: overline;
+          text-decoration-line: overline;
 }
 .line-through {
-  text-decoration-line: line-through;
+  -webkit-text-decoration-line: line-through;
+          text-decoration-line: line-through;
 }
 .placeholder-text-secondary::placeholder {
   --tw-placeholder-opacity: 1;
@@ -2239,13 +2259,17 @@ video {
 }
 .backdrop-blur-\[2px\] {
   --tw-backdrop-blur: blur(2px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 .backdrop-filter {
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 .transition {
+  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -2255,7 +2279,9 @@ video {
   transition-duration: 150ms;
 }
 .transition-colors {
+  transition-property: color, background-color, border-color, fill, stroke, -webkit-text-decoration-color;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
